2006-11-29  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-python.i: Added some SWIG magic that allows the
	creation of a C doubles array. Also added a Python convenience
	function that converts a list to a C doubles array. This will allow
	users to access functions such as OBMol::Rotate.

2006-11-29  Benoit Jacob <jacob@math.jussieu.fr>

	* math/vector3.cpp: fix a bug that I had introduced a few days ago
	in createOrthoVector. Thanks go to the new unittests.

	* math/matrix3x3.h, math/matrix3x3.cpp: fix some defines in the
	same way as in vector3.h, add both constant and non-constant
	operator()(int,int) to access the matrix elements easily.
	Fix isUnit(), isOrthogonal(), isDiagonal().

	* test/math.cpp, test/Makefile.am, test/Makefile.in:
	New tests for the math/ subdirectory. Covers the constructors, access
	methods, various operators, operations on rows and columns and
	(partly, will be completed) the distances/angles/orthogonality stuff.

	* src/obutil.h: add new function IsNegligible(), checks whether a is
	much smaller than b with given precision.

2006-11-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* tools/obrotate.cpp: Use a simpler implementation with
	OBMol::SetTorsion(). (Need to rewrite command-line parsing to
	allow setting torsions of all matches, but no time now.)

	* tools/obrotamer.cpp, src/Makefile.am, src/Makefile.in: New tool
	to generate random rotamers using OBRotamerList and
	company. Additional example of using rotamer code.

	* src/rand.h, src/obutil.h, src/Makefile.am, src/Makefile.in:
	Split out OBRandom to mirror rand.cpp.

	* src/rotamer.cpp, src/rotamer.h, src/rotor.h, src/base.cpp:
	Documentation updates. 

	* src/rotor.cpp (OBRotorRules): Make sure Init() is called before
	any action, i.e.., GetRotorIncrements(). Fixes a bug uncovered
	with obrotamer.cpp

2006-11-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/*.cpp: Update to switch from OBNodeBase and OBEdgeBase